refactor(llm): 统一 LLM 调用抽象、消除 ObjectMapper、清理死代码
- 重构 ChatServiceImpl 和 LlmStepExecutor 使用 LlmChatClient/LlmChatClientFactory
- 修复 Tool Calling 回退：OpenAiCompatibleClient 和 ClaudeClient 解析 tool_calls/tool_use
- 新增 JsonUtil 工具类封装 Jackson 操作，业务代码不再直接使用 ObjectMapper/JsonNode
- 删除死代码：RedisUtil、LlmHttpClient.get()、LlmApiException.unknown()、
  AgentFacade.getToolIds()、WorkflowContext.getInput()/getStepOutput()、
  ChatMessageConvertor.toVO(单参)、JsonUtil.toList()、RerankProperties.topN
- 新增会话标题编辑功能（PUT /{id}/title + 前端编辑弹窗）
- 工作流执行持久化：新增 t_workflow_execution/t_workflow_node_execution 表及 PO/Mapper
- 增强 GlobalExceptionHandler 错误处理

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>