@@ -4,17 +4,12 @@ import com.ciff.chat.dto.ChatMessageMetadata;
 import com.ciff.chat.dto.ChatMessageVO;
 import com.ciff.chat.entity.ChatMessagePO;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 public final class ChatMessageConvertor {
 
     private ChatMessageConvertor() {
-    }
-
-    public static ChatMessageVO toVO(ChatMessagePO po) {
-        return toVO(po, Collections.emptyMap());
     }
 
     public static ChatMessageVO toVO(ChatMessagePO po, Map<Long, String> docNameMap) {
@@ -34,7 +29,7 @@ public final class ChatMessageConvertor {
     private static List<String> extractReferenceDocs(ChatMessageMetadata metadata,
                                                        Map<Long, String> docNameMap) {
         if (metadata == null || metadata.getRagDocIds() == null || metadata.getRagDocIds().isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         return metadata.getRagDocIds().stream()
                 .map(docNameMap::get)
